# near-sdk-rs

examples/cross-contract-high-level/: README.md
examples/gas-fee-tester/: Cargo.toml  run.py
examples/gas-fee-tester/res/: gas_fee_tester.wasm
examples/gas-fee-tester/src/: lib.rs
examples/nonfungible-token/: Cargo.toml  build.sh
examples/nonfungible-token/res/: nonfungible_token.wasm
examples/nonfungible-token/src/: lib.rs
examples/sasha-services/: Cargo.toml  build.sh
examples/sasha-services/src/: lib.rs
near-bindgen/: Cargo.toml
near-sdk/src/environment/: env.rs
